# deguix

./: CHANGELOG.md  README.md  pyproject.toml
deguix/: __init__.py  __main__.py  cli.py
