[project]
name = "deguix"
description = "Run commands without Guix environment variables"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "nomike Postmann", email = "nomike@nomike.com"}]
keywords = ["deguix", "guix"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Topic :: Software Development"
]
dependencies = [
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "doc8",
    "flake8",
    "flake8-import-order",
    "rstcheck[sphinx]",
    "sphinx",
]

[project.scripts]
deguix = "ecdklint.cli:run"

[project.urls]
homepage = "https://github.com/nomike/deguix"
repository = "https://github.com/nomike/deguix"
documentation = "https://github.com/nomike/deguix"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61"]

[tool.setuptools]
packages = ["deguix"]

[tool.setuptools.package-data]
deguix = ["conf/*.yaml"]

[tool.setuptools.dynamic]
version = {attr = "deguix.__version__"}
